Added style on nav

--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GPTMaster</title>
+    <style>
+        nav {
+            display: flex;
+            gap: 2rem;
+            justify-content: center;
+            background-color: #222;
+            padding: 1rem 0;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 1.1rem;
+            padding: 0.5rem 1rem;
+            border-radius: 4px;
+            transition: background 0.2s, color 0.2s;
+        }
+
+        nav a:hover {
+            background-color: #fff;
+            color: #222;
+        }
+    </style>
 </head>
 
 <body>
